--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "dotenv": "^7.0.0",
         "ejs": "^2.6.1",
         "express": "^4.16.4",
+        "jsonwebtoken": "^8.5.1",
         "log4js": "^6.1.2",
         "mongoose": "^5.4.21",
         "morgan": "^1.9.1",
